--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,38 +1,27 @@
-<h2>Sign up</h2>
-
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
-	
-	<div><%= f.label :name %><br />
-    <%= f.text_field :name %></div>
-
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email, autofocus: true %></div>
-	
-	<%if params[:retailer]%>
-		<%= f.hidden_field :role_type, value: "RETAILER" %>
-		<%= f.hidden_field :retailer_approval, value: false %>
-		<div><%= f.label :description %><br />
-    <%= f.text_area :desc %></div>
-		<div>Contact no<br>
-		<input type="text" name="retailer[contact_no]"></div>
-		<div>Gender	<br>
-		<input type="text" name="retailer[gender]"></div>
-		<% @password = (0..10).map { ('A'..'Z').to_a[rand(26)] }.join%>
-		<%=f.hidden_field :password, :value=>@password%>
-		<%=f.hidden_field :password_confirmation, :value=>@password%>
-	<% else %>
-		<%= f.hidden_field :role_type, :value=>"CUSTOMER" %>
-		<div><%= f.label :password %><br />
-			<%= f.password_field :password, autocomplete: "off" %></div>
-
-		<div><%= f.label :password_confirmation %><br />
-			<%= f.password_field :password_confirmation, autocomplete: "off" %></div>
-	<% end %>
-
-  
-
-  <div><%= f.submit "Sign up" %></div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+<div class="register_account">
+	<div class="wrap">
+		<h4 class="title">Create an Account</h4>
+		<form action="/registrations" method="post">
+			<div class="col_1_of_2 span_1_of_2">
+				<div><input type="text" value="name" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Name';}"></div>
+				<div><input type="text" value="email" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'E-Mail';}"></div>
+				<div><input type="text" value="password" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'password';}"></div>	
+				<div><input type="text" value="password_confirmation" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'password confirmation';}"></div>
+			</div>
+		
+			<div class="col_1_of_2 span_1_of_2">	
+				<div><input type="text" value="Address" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Address';}"></div>
+				<div><input type="text" value="City" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'City';}"></div>
+				<div>
+				</div>
+				<input type="text" value="" class="code"> - <input type="text" value="" class="number">
+				<p class="code">Country Code + Phone Number</p>
+			</div>
+			 <button class="grey">Submit</button>
+			<p class="terms">By clicking 'Create Account' you agree to the <a href="#">Terms &amp; Conditions</a>.</p>
+			<div class="clear"></div>
+		</form>
+	</div>
+</div>
+    
+		
