--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -24,7 +24,7 @@
 					<li><a href="checkout.html">Wishlist</a></li> |
 					<li><a href="checkout.html">Checkout</a></li> |
 					<li><a href="login.html">Log In</a></li> |
-					<li><a href="register.html">Sign Up</a></li>
+					<li><%=link_to "Sign Up", new_user_registration_path%></li>
 				</ul>
 			</div>
 			<div class="clear"></div>
@@ -151,41 +151,4 @@
      <div class="clear"></div>
      </div>
 	</div>
-  <!-- start slider -->
-    <div id="fwslider">
-        <div class="slider_container">
-            <div class="slide"> 
-                <!-- Slide image -->
-                    <img src="/assets/leoshop-images/banner.jpg" alt=""/>
-                <!-- /Slide image -->
-                <!-- Texts container -->
-                <div class="slide_content">
-                    <div class="slide_content_wrap">
-                        <!-- Text title -->
-                        <h4 class="title">Aluminium Club</h4>
-                        <!-- /Text title -->
-                        
-                        <!-- Text description -->
-                        <p class="description">Experiance ray ban</p>
-                        <!-- /Text description -->
-                    </div>
-                </div>
-                 <!-- /Texts container -->
-            </div>
-            <!-- /Duplicate to create more slides -->
-            <div class="slide">
-                <img src="/assets/leoshop-images/banner1.jpg" alt=""/>
-                <div class="slide_content">
-                    <div class="slide_content_wrap">
-                        <h4 class="title">consectetuer adipiscing </h4>
-                        <p class="description">diam nonummy nibh euismod</p>
-                    </div>
-                </div>
-            </div>
-            <!--/slide -->
-        </div>
-        <div class="timers"></div>
-        <div class="slidePrev"><span></span></div>
-        <div class="slideNext"><span></span></div>
-    </div>
-    <!--/slider -->
+  
